# dockd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  crtc.cpp  crtc.h  dock.hook  dockd.desktop  dockd.service  hooks.cpp  hooks.h  main.cpp  undock.hook
